# keepassxc-proxy-client

./: README.md  main.py  pyproject.toml  requirements.txt
keepassxc_proxy_client/: __main__.py
src/keepassxc_proxy_client/: __init__.py  __main__.py  commands.py  errors.py  keystore.py  protocol.py
tests/: test_cli_commands.py  test_cli_parser.py  test_keystore.py  test_protocol.py
