[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keepassxc-proxy-client"
version = "0.1.7"
description = "A client (library + CLI) for KeePassXC's Browser Integration protocol."
readme = "README.md"
license = "0BSD"
requires-python = ">=3.9"
authors = [
    { name = "Henrik Boeving", email = "hargonix@gmail.com" },
    { name = "Marek Rost", email = "marek.rost@gmail.com" },
]
keywords = ["keepassxc", "keepass", "browser-integration", "secrets", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
dependencies = [
    "pynacl",
    "platformdirs",
    "pywin32; sys_platform == 'win32'",
]

[project.scripts]
keepassxc_proxy_client = "keepassxc_proxy_client.__main__:main"

[project.urls]
Repository = "https://github.com/hargoniX/keepassxc-proxy-client"
Issues = "https://github.com/hargoniX/keepassxc-proxy-client/issues"
Changelog = "https://github.com/hargoniX/keepassxc-proxy-client/blob/master/CHANGELOG.md"

[dependency-groups]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/keepassxc_proxy_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
